feat: add calendar subscription renewal
